<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:layout_gravity="center"
    android:background="@color/colorBlanco">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/baner_jaguar" />

    <EditText
        android:id="@+id/et_nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPrincipal"
        android:ems="10"
        android:hint="@string/et_nombre_usuario"
        android:inputType="textPersonName"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorPrincipal"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:drawableLeft="@drawable/ic_usuario"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/et_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/et_contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_usuario"
        android:textColorHint="@color/colorPrincipal"
        android:textColor="@color/colorNegro"
        android:textStyle="bold"
        android:textSize="18dp"
        android:backgroundTint="@color/colorPrincipal"
        android:drawableLeft="@drawable/ic_contrasena"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btn_ingresar"
        android:onClick="ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_borde_solido"
        android:text="@string/btn_ingresar"
        android:textColor="@color/colorPrincipal"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasena" />

    <Button
        android:id="@+id/btn_registrarme"
        android:onClick="registrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_con_fondo"
        android:text="@string/btn_registrarme"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingresar" />

    <Button
        android:id="@+id/btn_recuperar"
        android:onClick="recuperarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_sin_fondo"
        android:text="@string/btn_recuperar"
        android:textColor="@color/colorPrincipal"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrarme"
        android:drawableRight="@drawable/ic_recuperar"
        android:drawablePadding="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>